<resources>
    <string name="app_name">BakingApp</string>
    <string name="label_number_of_servings">Number of Servings:</string>
    <string name="recipe_image_content_description">Image of the recipe</string>
    <string name="see_steps">See steps</string>
    <string name="start_cooking">Start cooking</string>
    <string name="thumbnail_recipe_step">Thumbnail recipe step</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="pick_recipe">Pick a recipe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
