<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_alignParentTop="true"
            android:id="@+id/iv_recipe_image"
            tools:src="@mipmap/recipe_default"
            android:contentDescription="@string/recipe_image_content_description"
            style="@style/CoverMedia"/>

        <Button
            android:id="@+id/btn_start_cooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_cooking"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/btn_see_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_steps"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

        <ListView
            android:id="@+id/lv_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_below="@id/iv_recipe_image"
            android:layout_above="@id/btn_see_steps"/>
    </RelativeLayout>
</FrameLayout>